        from the base value, fill="replace" works magically simply by not contributing anything.
        
        * svg/animation/SVGSMILElement.h:
        (WebCore::SVGSMILElement::previousIntervalBegin):
        (WebCore::SVGSMILElement::documentOrderIndex):
        (WebCore::SVGSMILElement::setDocumentOrderIndex):

2008-04-17  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by mrowe.

        Define HAVE_ACCESSIBILITY in a way that WebKit and WebCore can see it.

        * config.h: Remove HAVE_ACCESSIBILITY.
        * page/AccessibilityObject.h: Include wtf/Platform.h to pick up
        HAVE_ACCESSIBILITY.

2008-04-17  Jon Honeycutt  <jhoneycutt@apple.com>

        Reviewed by aliu.

        * page/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::layoutCount): Check isRenderView() before
        casting to RenderView.

2008-04-17  Antti Koivisto  <antti@apple.com>

        Reviewed by Oliver.
        
        Fix https://bugs.webkit.org/show_bug.cgi?id=18551
        Bug 18551: REGRESSION (r31801?): Crash in ContainerNode::removedFromDocument on many SVG tests under guard malloc
        
        Freeing a RefPtr that is the last ref to the parent from removedFromDocument() is a bad idea.

        Caching the target element is too dangerous, let's simply not do it. Getting it is very cheap anyway.

        * svg/animation/SVGSMILElement.cpp:
        (WebCore::SVGSMILElement::removedFromDocument):
        (WebCore::SVGSMILElement::attributeChanged):
        (WebCore::SVGSMILElement::targetElement):
        * svg/animation/SVGSMILElement.h:

2008-04-17  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Autogenerate the XMLHttpRequest javascript binding.

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCoreSources.bkl:
        * DerivedSources.make:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSDOMWindowBase.cpp: