@@ -707,6 +707,16 @@
 
 2008-04-17  Jon Honeycutt  <jhoneycutt@apple.com>
 
+        Reviewed by Darin, Alice.
+
+        Implement AXObjectCache::detachWrapper() on Windows.
+
+        * page/win/AXObjectCacheWin.cpp:
+        (WebCore::AXObjectCache::detachWrapper): If this object has a wrapper,
+        call its detach() method.
+
+2008-04-17  Jon Honeycutt  <jhoneycutt@apple.com>
+
         Reviewed by mrowe.
 
         Define HAVE_ACCESSIBILITY in a way that WebKit and WebCore can see it.
